# event-timers

./: .gitignore  Cargo.toml  event_tracks.json  flake.nix
core/: Cargo.toml
core/examples/: gen_fixtures.rs
core/src/: config.rs  lib.rs  tracks.rs
core/tests/: serde_format.rs  track_overrides.rs
core/tests/fixtures/: default_user_config.json  empty_object_user_config.json  populated_user_config.json
src/: config.rs  json_loader.rs  lib.rs  notification_logic.rs  time_utils.rs
src/ui/: main_window.rs  notifications.rs  settings.rs
